--- a/beest/Makefile
+++ b/beest/Makefile
@@ -23,8 +23,8 @@ STS_AWS_TEST_BUCKET          ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO         ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO_CLUSTER ?= stackstate-cluster-agent-test
 
-
-BASE_KEEPER_IMAGE  = stackstate/stackstate-agent-2-test:beest-keeper-base
+TODAY			   = $(shell date +%Y%m%d)
+BASE_KEEPER_IMAGE  = stackstate/stackstate-agent-2-test:beest-keeper-base-${TODAY}
 IMAGE_NAME         = beest
 CONTAINER_NAME     = beest
 VOLUME_GO_PKG_NAME = beest-go-volume
@@ -44,12 +44,26 @@ DOCKER_RUN = docker run -it --rm \
              	--env STS_DOCKER_TEST_REPO_CLUSTER=${STS_DOCKER_TEST_REPO_CLUSTER} \
              	${IMAGE_NAME}:${BRANCH}
 
+DOCKER_RUN_M = docker run --rm \
+             	--volume ${PWD}:/go/src/app \
+             	--env AGENT_CURRENT_BRANCH=${CI_COMMIT_REF_NAME} \
+             	--env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
+             	--env MAJOR_VERSION=${MAJOR_VERSION} \
+             	--env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
+             	--env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
+             	--env STS_DOCKER_TEST_REPO_CLUSTER=${STS_DOCKER_TEST_REPO_CLUSTER} \
+             	--workdir /go/src/app \
+             	${BASE_KEEPER_IMAGE}
+
 
 build-base:
 	docker build -t ${BASE_KEEPER_IMAGE} -f ./keeper.base.dockerfile .
 
 push-base: build-base
 	docker push ${BASE_KEEPER_IMAGE}
+
+beest:
+	${DOCKER_RUN_M} ./beest.sh $(action)
 
 
 build:
@@ -59,11 +73,8 @@ build:
 		--build-arg DOCKER_GID=${DOCKER_GID} \
 		-f ./keeper.dockerfile .
 
-beest: build
-	${DOCKER_RUN} ./beest.sh $(action)
-
 start: build
-	${DOCKER_RUN} bash --init-file ./bootstrap.sh
+	${DOCKER_RUN}
 
 shell:
 	docker exec -ti ${CONTAINER_NAME} bash --init-file ./bootstrap.sh
@@ -74,3 +85,5 @@ shell-root:
 
 raw-debug: build
 	docker run -it --rm ${IMAGE_NAME}:${BRANCH}
+
+.PHONY: beest
