--- a/beest/sut/bees/tasks/kubectl/test_connections/tcptracer-bpf-nettop.yaml
+++ b/beest/sut/bees/tasks/kubectl/test_connections/tcptracer-bpf-nettop.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       serviceAccountName: stackstate-agent
       containers:
-      - image: artifactory.stackstate.io/docker-virtual/stackstate/tcptracer-bpf-nettop:latest
+      - image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/tcptracer-bpf-nettop:latest
         imagePullPolicy: Always
         name: stackstate-agent
         securityContext:
