--- a/beest/Makefile
+++ b/beest/Makefile
@@ -1,7 +1,7 @@
 .SHELLFLAGS = -ec
 
 SHELL         := /bin/bash
-.DEFAULT_GOAL := beest
+.DEFAULT_GOAL := start
 
 UID    ?= $(shell id -u)
 GID    ?= $(shell id -g)
@@ -14,46 +14,25 @@ ifeq ($(OS),Darwin)
 	DOCKER_GID ?= $(shell stat -f '%g' /var/run/docker.sock)
 endif
 
-BRANCH ?= $(shell git rev-parse --abbrev-ref HEAD | cut -d'/' -f 2- | tr [:upper:] [:lower:])
+GIT_BRANCH = $(shell git rev-parse --abbrev-ref HEAD)
+BRANCH = $(shell echo ${GIT_BRANCH} | cut -d'/' -f 2- | tr [:upper:] [:lower:])
 
-CI_COMMIT_REF_NAME           ?= ${BRANCH}
-STACKSTATE_BRANCH            ?= master
+STACKSTATE_BRANCH            ?= 4.5.1
 MAJOR_VERSION                ?= 2
 STS_AWS_TEST_BUCKET          ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO         ?= stackstate-agent-2-test
 STS_DOCKER_TEST_REPO_CLUSTER ?= stackstate-cluster-agent-test
 
-TODAY			   = $(shell date +%Y%m%d)
-BASE_KEEPER_IMAGE  = stackstate/stackstate-agent-2-test:beest-keeper-base-${TODAY}
-IMAGE_NAME         = beest
-CONTAINER_NAME     = beest
+BASE_KEEPER_IMAGE  = stackstate/stackstate-agent-2-test:beest-keeper-base-20220108
+KEEPER_IMAGE       = beest:${BRANCH}
+KEEPER_CONTAINER   = beest
 VOLUME_GO_PKG_NAME = beest-go-volume
-
-DOCKER_RUN = docker run -it --rm \
-             	--name ${CONTAINER_NAME} \
-             	--volume ${PWD}:/go/src/app \
-             	--volume ${HOME}/.aws:/home/keeper/.aws \
-             	--volume /var/run/docker.sock:/var/run/docker.sock:ro \
-             	--mount source=${VOLUME_GO_PKG_NAME},target=/go/pkg \
-             	--network host \
-             	--env AGENT_CURRENT_BRANCH=${CI_COMMIT_REF_NAME} \
-             	--env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
-             	--env MAJOR_VERSION=${MAJOR_VERSION} \
-             	--env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
-             	--env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
-             	--env STS_DOCKER_TEST_REPO_CLUSTER=${STS_DOCKER_TEST_REPO_CLUSTER} \
-             	${IMAGE_NAME}:${BRANCH}
-
-DOCKER_RUN_M = docker run --rm \
-             	--volume ${PWD}:/go/src/app \
-             	--env AGENT_CURRENT_BRANCH=${CI_COMMIT_REF_NAME} \
-             	--env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
-             	--env MAJOR_VERSION=${MAJOR_VERSION} \
-             	--env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
-             	--env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
-             	--env STS_DOCKER_TEST_REPO_CLUSTER=${STS_DOCKER_TEST_REPO_CLUSTER} \
-             	--workdir /go/src/app \
-             	${BASE_KEEPER_IMAGE}
+DOCKER_ENV		   = --env AGENT_CURRENT_BRANCH=${GIT_BRANCH} \
+					 --env STACKSTATE_BRANCH=${STACKSTATE_BRANCH} \
+					 --env MAJOR_VERSION=${MAJOR_VERSION} \
+					 --env STS_AWS_TEST_BUCKET=${STS_AWS_TEST_BUCKET} \
+					 --env STS_DOCKER_TEST_REPO=${STS_DOCKER_TEST_REPO} \
+					 --env STS_DOCKER_TEST_REPO_CLUSTER=${STS_DOCKER_TEST_REPO_CLUSTER}
 
 
 build-base:
@@ -62,28 +41,34 @@ build-base:
 push-base: build-base
 	docker push ${BASE_KEEPER_IMAGE}
 
-beest:
-	${DOCKER_RUN_M} ./beest.sh $(action)
-
-
 build:
-	docker build -t ${IMAGE_NAME}:${BRANCH} \
+	docker build -t ${KEEPER_IMAGE} \
 		--build-arg UID=${UID} \
 		--build-arg GID=${GID} \
 		--build-arg DOCKER_GID=${DOCKER_GID} \
 		-f ./keeper.dockerfile .
 
 start: build
-	${DOCKER_RUN}
+	docker run -it --rm \
+        --name ${KEEPER_CONTAINER} \
+        --volume ${PWD}:/go/src/app \
+        --volume ${HOME}/.aws:/home/keeper/.aws \
+        --volume /var/run/docker.sock:/var/run/docker.sock:ro \
+        --mount source=${VOLUME_GO_PKG_NAME},target=/go/pkg \
+        --network host \
+        ${DOCKER_ENV} \
+        ${KEEPER_IMAGE}
 
 shell:
-	docker exec -ti ${CONTAINER_NAME} bash --init-file ./bootstrap.sh
+	docker exec -ti ${KEEPER_CONTAINER} bash --init-file ./bootstrap.sh
 
 shell-root:
-	docker exec --user root -ti ${CONTAINER_NAME} bash
+	docker exec --user root -ti ${KEEPER_CONTAINER} bash
 
 
-raw-debug: build
-	docker run -it --rm ${IMAGE_NAME}:${BRANCH}
-
-.PHONY: beest
+gitlab-debug:
+	docker run -it --rm \
+		--volume ${PWD}:/root/beest \
+		--env CI_PROJECT_DIR=/root \
+		${DOCKER_ENV} \
+		${BASE_KEEPER_IMAGE}
