--- a/beest/sut/bees/tasks/docker/login.yml
+++ b/beest/sut/bees/tasks/docker/login.yml
@@ -1,7 +1,3 @@
 ---
 - name: Docker login
-  docker_login:
-    registry: quay.io
-    username: "{{ quay_user }}"
-    password: "{{ quay_password }}"
-    reauthorize: yes
+  command: "docker login -u {{ quay_user }} -p {{ quay_password }} quay.io"
