--- a/beest/sut/yards/eks-receiver/group_vars/all.yml
+++ b/beest/sut/yards/eks-receiver/group_vars/all.yml
@@ -1,9 +1,4 @@
 ---
-ci_commit_sha: "{{ lookup('env', 'CI_COMMIT_SHA') or lookup('env', 'USER') }}"
-ci_project_dir: "{{ lookup('env', 'CI_PROJECT_DIR') }}"
-ci_job_token: "{{ lookup('env', 'CI_JOB_TOKEN') }}"
-ci_sts_major_python_version: "{{ lookup('env', 'STS_VER') }}.{{ lookup('env', 'MAJOR_VERSION') }}.{{ lookup('env', 'PYTHON_RUNTIMES') }}"
-
 agent_current_branch: "{{ lookup('env', 'AGENT_CURRENT_BRANCH') or AGENT_CURRENT_BRANCH }}"
 agent_docker_repo: "{{ lookup('env', 'STS_DOCKER_TEST_REPO') or STS_DOCKER_TEST_REPO }}"
 cluster_agent_docker_repo: "{{ lookup('env', 'STS_DOCKER_TEST_REPO_CLUSTER') or STS_DOCKER_TEST_REPO_CLUSTER }}"
@@ -18,5 +13,4 @@ headless_service_port: 543
 namespace: "{{ agent_current_branch.replace('.','-').replace('_','-') | lower }}"
 cluster_name: "{{ namespace }}"
 
-#kubeconfig: "{{ ansible_user_dir }}/.kube/config" TODO
-kubeconfig: "/home/keeper/.kube/config"
+kubeconfig: "{{ lookup('env', 'HOME') }}/.kube/config"
