--- a/beest/sut/bees/tasks/kubectl/create-namespace.yml
+++ b/beest/sut/bees/tasks/kubectl/create-namespace.yml
@@ -1,8 +1,8 @@
 ---
 - name: Create test namespace '{{namespace}}'
   kubernetes.core.k8s:
-    name: "{{ namespace }}"
+    context: "{{ kubecontext }}"
     api_version: v1
     kind: Namespace
+    name: "{{ namespace }}"
     state: present
-
