--- a/beest/sut/bees/tasks/kubectl/delete-namespace.yml
+++ b/beest/sut/bees/tasks/kubectl/delete-namespace.yml
@@ -1,5 +1,5 @@
 ---
 - name: Delete namespace '{{namespace}}'
-  shell: "kubectl delete ns {{ namespace }}"
+  shell: kubectl --context={{ kubecontext }} delete ns {{ namespace }}
   environment:
     KUBECONFIG: "{{ kubeconfig }}"
