--- a/beest/sut/yards/eks-receiver/group_vars/all.yml
+++ b/beest/sut/yards/eks-receiver/group_vars/all.yml
@@ -14,3 +14,4 @@ namespace: "{{ agent_current_branch.replace('.','-').replace('_','-') | lower }}
 cluster_name: "{{ namespace }}"
 
 kubeconfig: "{{ lookup('env', 'HOME') }}/.kube/config"
+kubecontext: "{{ yard_id }}"
