--- a/beest/sut/bees/tasks/kubectl/apply-manifest-test-workload.yml
+++ b/beest/sut/bees/tasks/kubectl/apply-manifest-test-workload.yml
@@ -1,6 +1,6 @@
 ---
 - name: Apply manifests for test workloads
-  command: kubectl -n={{ namespace }} apply -f test_workloads
+  command: kubectl --context={{ kubecontext }} -n={{ namespace }} apply -f test_workloads
   args:
     chdir: "{{ ansibleTasksDir }}/kubectl"
   environment:
