--- a/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
+++ b/beest/sut/bees/tasks/kubectl/create-secret-for-private-docker.yml
@@ -1,5 +1,5 @@
 ---
 - name: Create secret to allow pulling from private docker registry
-  shell: kubectl get secret docker-registry-key -n default || kubectl create secret generic docker-registry-key -n default --from-file=.dockerconfigjson="{{ ansible_user_dir }}/.docker/config.json" --type=kubernetes.io/dockerconfigjson
+  shell: kubectl --context={{ kubecontext }} get secret docker-registry-key || kubectl --context={{ kubecontext }} create secret generic docker-registry-key --from-file=.dockerconfigjson="{{ ansible_user_dir }}/.docker/config.json" --type=kubernetes.io/dockerconfigjson
   environment:
     KUBECONFIG: "{{ kubeconfig }}"
