--- a/beest/sut/bees/tasks/kubectl/scenario-pod-to-service-ip.yml
+++ b/beest/sut/bees/tasks/kubectl/scenario-pod-to-service-ip.yml
@@ -1,6 +1,6 @@
 ---
 - name: Apply the pod-to-service-cluster-ip scenario
-  command: kubectl -n={{ namespace }} apply -f pod-to-service-cluster-ip.yaml
+  command: kubectl --context={{ kubecontext }} -n={{ namespace }} apply -f pod-to-service-cluster-ip.yaml
   args:
     chdir: "{{ ansibleTasksDir }}/kubectl/test_connections"
   environment:
