--- a/test/molecule-role/molecule/_shared/install-and-update/install-provisioning-dependencies.yml
+++ b/test/molecule-role/molecule/_shared/install-and-update/install-provisioning-dependencies.yml
@@ -2,7 +2,7 @@
 - name: Install provisioning dependencies (1/2)
   apt:
     name:
-      python3-pip
+      [python3-pip, jq]
     state: present
   become: yes
   register: pip3_res
