build publisher base, use publisher base when building deb-rpm publisher

--- a/.cd-builders/runner-circle-deb/Makefile
+++ b/.cd-builders/runner-circle-deb/Makefile
@@ -1,12 +1,13 @@
 RUNTIMETAG := $(shell date +%Y%m%d)
+DOCKER_REPOSITORY ?= docker.io
 
 build:
-	docker build -t docker.io/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG) .
+	docker build -t $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG) .
 push:
-	docker push docker.io/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG)
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG)
 
 tag_latest:
-	docker tag docker.io/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG) docker.io/stackstate/stackstate-agent-runner-circle:deb_latest
+	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb_$(RUNTIMETAG) $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb_latest
 
 push_latest:
-	docker push docker.io/stackstate/stackstate-agent-runner-circle:deb_latest
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb_latest
