STAC-15493 Add the cleaning of old artifacts from windows runners.

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1,6 +1,7 @@
 image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
 
 stages:
+  - automatic_cleanup
   - manual_cleanup
   - prepare
   - prepare_temp
@@ -77,6 +78,15 @@ before_script:
   - *retrieve_linux_go_deps_script
 
 ## prepare stage
+
+clean_windows_pkg_dir:
+  stage: automatic_cleanup
+  when: always
+  script:
+    - del C:\omnibus-ruby\pkg\*
+  allow_failure: true
+  tags:
+    - windows_agent7_ps1
 
 clear_deps_deb_cache:
   stage: manual_cleanup
