STAC-0 Trying to get the MR build to pass for @tizianoperrucci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ variables: &commonvariables
   # IE VMS is a massive jobs and only has to run on either v2 or the v3 pipeline. With this variable you can control on which of the pipelines
   # do jobs like these run on
   PRIMARY_MAJOR_VERSION: '2'
-
+  # A comment
 
 .agent2_variables: &agent2_variables
   CONDA_ENV: ddpy2
