--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,7 +130,9 @@ agent3:
    strategy: depend
  rules:
    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+   - if: '$CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS'
      when: never
+   - if: '$CI_COMMIT_BRANCH'
    - <<: *exclude_on_cluster_agent
    # exclude this pipeline if we're running a v2 tag pipeline
    - <<: *exclude_on_tag_v2
